--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="no_audio_files">No audio files found in this album.</string>
     <string name="play_error">The selected audio file is not playable. Maybe the file does not exist anymore.</string>
     <string name="permission_denied">Necessary permission was not granted. Quit AudioBook.</string>
-    <string name="write_permission_denied">Necessary permission was not granted. Export cannot be executed.</string>
+    <string name="write_permission_denied">Necessary permission was not granted. Cannot write to storage.</string>
     <string name="time_format_error">Please enter a valid time in the format hh:mm:ss.</string>
     <string name="import_success">Import successful :)</string>
     <string name="import_fail">Something went wrong. Import failed.</string>
@@ -34,6 +34,7 @@
     <string name="directory_exists">The selected directory already exists in your library: %s.</string>
     <string name="parent_directory_exists">You can\'t add subdirectories of directories that already exist in your library:\n%s\n%s.</string>
     <string name="sub_directory_exists">You can\'t add parent directories of directories that already exist in your library:\n%s\n%s.</string>
+    <string name="illegal_speed">The current file can\'t be played at speed %.1fx. Please select a different value.</string>
 
     <!-- Settings strings -->
     <string name="settings_autoplay_label">Autoplay</string>
